<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="state"
            type="com.task.actionlist.ui.EditorFragment.EditorStates" />

        <variable
            name="click"
            type="com.task.actionlist.ui.bind.ClickProxy" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/color_white"
                android:elevation="8dp"
                android:orientation="horizontal"
                android:paddingTop="12dp"
                android:paddingBottom="8dp">

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_back"
                    android:layout_width="36dp"
                    android:layout_height="56dp"
                    android:layout_marginStart="12dp"
                    android:background="@color/transparent"
                    android:onClick="@{click.listener}"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_baseline_arrow_back"
                    android:tint="@color/color_black" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_title"
                        android:layout_width="wrap_content"
                        android:layout_height="32dp"
                        android:gravity="center_vertical"
                        android:paddingStart="12dp"
                        android:paddingEnd="4dp"
                        android:text="@{state.tip}"
                        android:textColor="@color/color_black"
                        android:textSize="24sp" />

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/tv_time"
                        android:layout_width="wrap_content"
                        android:layout_height="20dp"
                        android:gravity="center_vertical"
                        android:paddingStart="12dp"
                        android:paddingEnd="12dp"
                        android:text="@{state.time}"
                        android:textColor="@color/color_black"
                        android:textSize="14sp" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.AppCompatImageButton
                    android:id="@+id/btn_calendar"
                    visible="@{state.visible}"
                    android:layout_width="36dp"
                    android:layout_height="56dp"
                    android:layout_marginEnd="8dp"
                    android:background="@color/transparent"
                    android:onClick="@{click.listener}"
                    android:scaleType="centerInside"
                    android:src="@drawable/ic_baseline_calendar_today_24"
                    android:tint="@color/color_black" />

            </androidx.appcompat.widget.LinearLayoutCompat>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_title"
                    requestFocus="@{state.titleRequestFocus}"
                    showKeyboard="@{state.titleRequestFocus}"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_white"
                    android:enabled="@{state.visible}"
                    android:gravity="center_vertical"
                    android:hint="@string/title"
                    android:text="@={state.title}"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="24sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_assignee"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/color_white"
                    android:enabled="@{state.visible}"
                    android:gravity="top"
                    android:hint="@string/assignee"
                    android:singleLine="true"
                    android:text="@={state.assignee}"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <!--            <View-->
            <!--                android:id="@+id/view"-->
            <!--                android:layout_width="match_parent"-->
            <!--                android:layout_height="1dp"-->
            <!--                android:background="@color/gray" />-->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_requested_by"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:background="@color/color_white"
                    android:enabled="@{state.visible}"
                    android:gravity="top"
                    android:hint="@string/requested_by"
                    android:singleLine="true"
                    android:text="@={state.requestedBy}"
                    android:textColor="@color/color_black"
                    android:textColorHint="@color/dark_gray"
                    android:textSize="16sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/et_content"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/color_white"
                android:enabled="@{state.visible}"
                android:gravity="top"
                android:hint="@string/content"
                android:padding="12dp"
                android:text="@={state.content}"
                android:textColor="@color/color_black"
                android:textColorHint="@color/dark_gray"
                android:textSize="16sp" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fab"
            visible="@{state.visible}"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:contentDescription="@string/new_note"
            android:onClick="@{click.listener}"
            android:src="@drawable/ic_baseline_check_24" />

        <FrameLayout
            visible="@{state.loading}"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

    </RelativeLayout>
</layout>
